--- a/.prettierrc
+++ b/.prettierrc
@@ -18,8 +18,7 @@
   "importOrderCaseInsensitive": true,
   "importOrderGroupNamespaceSpecifiers": true,
   "plugins": [
-    "prettier-plugin-tailwindcss",
-    "@trivago/prettier-plugin-sort-imports"
-  ],
-  "tailwindConfig": "./tailwind.config.ts"
+    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-tailwindcss"
+  ]
 }
